<resources>
    <string name="app_name">MVVMKotlin</string>

    <!-- Home -->
    <string name="home">Home Page</string>
    <string name="exit">Exiting…</string>
    <string name="back_pressed">Press back again to close this app</string>

    <!-- Home Detail -->
    <string name="email">Email : </string>
    <string name="username">Username : </string>
    <string name="phone">Phone : </string>
    <string name="website">Web Site : </string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="countries_label">Countries</string>
    <string name="countries_hint">Where are you from?</string>
    <string name="submit_label">Submit</string>

    <string name="username_error">Please enter your username</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="login_success">Login Success</string>
    <string name="username_login_fail">Please enter correct username</string>
    <string name="password_login_fail">Please enter correct password</string>

    <!-- Register -->
    <string name="sign_up">Sign Up</string>
    <string name="register_label">Register</string>
    <string name="have_an_account_label">Have an account?</string>
    <string name="register_success">Register Success</string>
    <string name="user_exist_error">User is exist, please try another Username…</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDaEox_R2wh8gYQQ3pvhJpN_sMaoVVrRAU</string>
</resources>