<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_65"
        android:orientation="vertical"
        android:background="@drawable/round_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30"
            android:layout_marginBottom="@dimen/dimen_10"
            android:text="@string/login"
            android:textSize="@dimen/text_18"
            android:textStyle="bold|italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_marginEnd="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_5"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/username_label" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginEnd="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_5"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_label"
                android:background="@android:color/transparent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_15"
            android:layout_marginStart="@dimen/dimen_35"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginEnd="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_5"
            android:textStyle="bold"
            android:text="@string/countries_label"/>

        <TextView
            android:id="@+id/tvCountries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_13"
            android:padding="@dimen/dimen_10"
            android:background="@color/white"
            android:layout_marginStart="@dimen/dimen_35"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_marginEnd="@dimen/dimen_30"
            android:layout_marginBottom="@dimen/dimen_5"
            android:hint="@string/countries_hint"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@drawable/button_gradient_blue"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/dimen_25"
            android:paddingRight="@dimen/dimen_25"
            android:text="@string/submit_label" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@android:color/darker_gray"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_400"
                android:layout_marginBottom="@dimen/dimen_negative_150"
                android:contentDescription="@string/app_name"
                android:src="@drawable/town_2" />

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>