<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen_65"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30"
            android:layout_marginBottom="@dimen/dimen_20"
            android:text="@string/sign_up"
            android:textSize="@dimen/text_18"
            android:textStyle="bold|italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginEnd="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_5"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/username_label" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginEnd="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_5"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_label"
                android:background="@android:color/transparent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_10"
            android:paddingLeft="@dimen/dimen_20"
            android:paddingRight="@dimen/dimen_20"
            android:text="@string/register_label" />

        <TextView
            android:id="@+id/tvHaveAnAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="italic"
            android:text="@string/have_an_account_label"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_400"
                android:layout_marginBottom="@dimen/dimen_negative_150"
                android:contentDescription="@string/app_name"
                android:src="@drawable/town_1" />

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>